--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "expo-asset": "~8.1.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
-    "native-base": "^2.13.12",
+    "native-base": "2.13.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0"
+    "react-native-screens": "~2.2.0",
+    "react-native-snap-carousel": "^3.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
