--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "react-native-ratings": "^6.5.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-snap-carousel": "^3.9.0"
+    "react-native-snap-carousel": "^3.9.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "jest-expo": "~37.0.0"
+    "jest-expo": "~37.0.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
