--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@react-navigation/web": "~1.0.0-alpha.9",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.3",
-    "expo-constants": "~9.0.0",
+    "expo-constants": "^9.0.0",
+    "expo-file-system": "^8.1.0",
     "expo-font": "~8.1.0",
     "native-base": "2.13.1",
     "react": "~16.9.0",
@@ -33,9 +34,11 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-snap-carousel": "^3.9.0",
+    "react-native-webview": "^9.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "rn-pdf-reader-js": "^0.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
