--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-constants": "^9.0.0",
     "expo-file-system": "^8.1.0",
     "expo-font": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
     "native-base": "2.13.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
